# tlab-pptx

./: Makefile  README.md  requirements.txt  setup.cfg
.circleci/: config.yml
tests/: test_common.py  test_photo_luminescence.py
tlab_pptx/: __init__.py  abstract.py  common.py  photo_luminescence.py
