[metadata]
name = tlab-pptx
version = attr: tlab_pptx.__version__
author = Shuhei Nitta
author_email = huisintheta@gmail.com
url = https://github.com/Waseda-TakeuchiLab/tlab-pptx
description = Create PowerPoint files for Takeuchi Lab
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
python_requires = >= 3.10
include_package_data = True
packages = find:
test_suite = tests
install_requires =
    pandas>=1.4.3
    plotly>=5.9.0
    kaleido>=0.2.1
    python-pptx>=0.6.21

[options.packages.find]
exclude = 
    test*

[mypy]
python_version = 3.10
ignore_missing_imports = True
strict = True

[coverage:run]
omit =
    tests/*

[flake8]
max-line-length = 119

